--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,18 @@
 ---
-# tasks file for template
+- name: "[PRE-TASK] Fetch config.xml from remote host"
+  ansible.builtin.fetch:
+    src: "{{ config_file }}"
+    dest: "{{ local_file }}"
+    flat: true
+
+- name: Configure Firewall Rules
+  delegate_to: localhost
+  notify: Upload config
+  community.general.xml:
+    pretty_print: true
+    path: "{{ local_file }}"
+    xpath: "{{ xpath }}"
+    set_children: "{{ opnsense_firewall_rules }}"
+
+- name: Flush Handlers
+  ansible.builtin.meta: flush_handlers
